--- a/style.css
+++ b/style.css
@@ -10,15 +10,16 @@ p{
   font-family: 'Oswald', sans-serif;
 }
 header{
-  background:#91d3ff;
-  padding:20px 0;
-  text-align:center;
+  background:#965d5d;
+  padding:20px 20px;
+  
+  
 }
 main{
-  background:#b5e1ff;
+  background:#b57777;
 }
 footer{
-  background:#91d3ff;
+  background:#965d5d;
   text-align: center;
   display:inline-block;
   width:100%;
@@ -38,6 +39,12 @@ footer{
   box-sizing: border-box;
   border: 2px solid #000000;
   border-radius: 10px;
+  border-color: #6e4444;
+}
+a {
+  color: #ffffff;
+  text-decoration: none;
+  margin-top: 10px;
 }
 .produtos h2 {
   font-size: 30px;
@@ -55,4 +62,50 @@ footer{
 .sociais{
   display: flex;
   flex-direction: column;
+}
+.myButton {
+	box-shadow: 3px 4px 0px 0px #8a2a21;
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+	background-color:#c62d1f;
+	border-radius:18px;
+	border:1px solid #d02718;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+	background-color:#f24437;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+.myButton2 {
+	box-shadow: 3px 4px 0px 0px #8a2a21;
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+	background-color:#c62d1f;
+	border-radius:18px;
+	border:1px solid #d02718;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:7px 33px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+}
+.myButton2:hover {
+	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+	background-color:#f24437;
+}
+.myButton2:active {
+	position:relative;
+	top:1px;
 }
